# mCodingBot-pincer

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  .scrutinizer.yml  README.md  bot.py  config.py  pyproject.toml  requirements.txt  requirements_dev.txt  run.py  setup.cfg  start.sh
.github/workflows/: codeql-analysis.yml
cogs/: automod.py  dev.py  information.py  yt_statistics.py
mcoding_bot/: __init__.py  __main__.py  bot.py  cache.py  config.py
mcoding_bot/cogs/: __init__.py  automod.py  dev.py  information.py  misc.py  owner.py  react.py  starboard.py  yt_statistics.py
mcoding_bot/database/: __init__.py  database.py
mcoding_bot/database/migrations/0/: describe.json  migrations.sql
mcoding_bot/tasks/: __init__.py  update_channels.py
mcodingbot/: bot.py
tasks/: update_channels.py
tests/: test_blank.py
