[metadata]
name = mcoding_bot
description = mCoding Discord bot
author = James Murphy
version = 0.0.1
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    mcoding_bot
install_requires =
    pincer
    python-dotenv
    psutil
    aiohttp
python_requires = >=3.8
zip_safe = no

[options.extras_require]
testing =
    pytest
    mypy
    flake8

[options.package_data]
mcoding_bot = py.typed

[flake8]
max-line-length = 160